# ai_engineering_fredrik_kron_de24

./: .gitignore  README.md  pyproject.toml
03_gemini/: gemini_api_intro.ipynb
04_pydantic/: pydantic.ipynb  validation_without_pydantic.ipynb
05_pydantic_gemini/: cheap_houses.csv  gemini_pydantic.ipynb  gemini_pydantic_improved.ipynb  robust_pydantic.ipynb
06_fastapi_crud/: api.py  data_processing.py  try_my_api.ipynb
07_pydanticai/: pydanticai_fundamentals.ipynb
07_pydanticai_fastapi/: agents.py  data_models.py  movies_api.py  setup_db.py  utils.py
08_pydanticai_chatbot/: chat.py  chat_eda.ipynb  frontend.py
09_lancedb_vector_database/: lancedb.ipynb
exercises/exercise_0/: glossaries.md  pydantic_init.ipynb  summarize_job_ads.ipynb
exercises/exercise_0/data/: ads_1.md  ads_1.txt  ads_2.md  ads_2.txt  ads_3.md
exercises/exercise_0/summaries/: ads_1.md  ads_2.md  ads_3.md
exercises/exercise_1/: data_processing.py  glossary_api.py
video_alongs/04_pydantic/: person.json  pydantic.ipynb  pydantic_basics.ipynb
video_alongs/05_pydantic_gemini/: library.json
video_alongs/06_fastapi_crud/: api.py  constants.py  data_processing.py
video_alongs/07_pydanticai_fastapi/: data_models.py  movies_api.py  setup_db.py  utils.py
video_alongs/07_pydanticai_fundamentals/: cv.duckdb  pydanticai_pydantic_model.ipynb
video_alongs/08_pydanticai_chatbot/: chat.py  chat_eda.ipynb  frontend.py
video_alongs/09_lancedb_vector_database/: lancedb_basics.ipynb
video_alongs/10_pydanticai_rags/: explorations.ipynb  ingestion.py
(+3 files in other folders)
